# ohjelmistotekniikka

./: README.md  gitlog.md  komentorivi.txt
harjoitustyo/: .coveragerc  .env  .env.test  .gitignore  .pylintrc  memory  pyproject.toml  tasks.py
harjoitustyo/data/: Course_database.sqlite  Smonitor_username  Smonitor_username.csv  Smonitoringdatabase.sqlite  database.sqlite
harjoitustyo/dokumentaatio/: arkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
harjoitustyo/src/: build.py  config.py  database_connection.py  database_initialization.py  main.py  tasks.py
harjoitustyo/src/entities/: course.py  user.py
harjoitustyo/src/repository/: course_repository.py  user_repository.py
harjoitustyo/src/service/: studyMonitoring_services.py  studymonitoring_services.py
harjoitustyo/src/tests/: course_repository_test.py  firsttest.py  services_test.py  tests.py  user_repository_test.py  user_repository_tests.py
harjoitustyo/src/tests/services/: studyMonitoring_services_tests.py
harjoitustyo/src/ui/: Create_user_view  Create_user_view.py  login_view.py  new_course_view.py  student_view.py  teacher_view.py  teacher_view1.py  ui.py
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/: testikattavuus_kuva
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md
