[tool.poetry]
name = "harjoitustyo"
version = "0.1.0"
description = ""
authors = ["ds20220914 <davidkuul2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
