[tool.poetry]
name = "harjoitustyo"
version = "0.1.0"
description = ""
authors = ["ds20220914 <davidkuul2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
invoke = "^2.0.0"
cowsay = "^5.0"
pytest = "^7.2.2"
pytest-dotenv = "^0.5.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
coverage = "^7.2.2"
pylint = "^2.17.2"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
